remove hover titles, fix twitter embed height on mobile
twitter has a different height based on window orientation.
removed game hover titles because they look bad on mobile.
added a resource

--- a/css/games.css
+++ b/css/games.css
@@ -65,30 +65,6 @@ body {
   box-shadow: 0 0 5px black;
 }
 
-.game-cover:hover .darken {
-  background-color: #00000077;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
-
-.game-cover h3 {
-  color: white;
-  position: absolute;
-  text-align: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: none;
-}
-
-.game-cover:hover h3 {
-  display: block;
-}
-
 .game-columns {
   display: grid;
   grid-template-columns: 2fr 1fr;
